upped the sharing icons from 16px to 22px. removed z-index from meta menu to prevent drop shadow from showing over other page elements

--- a/app/sass/meta_menu_public.sass
+++ b/app/sass/meta_menu_public.sass
@@ -4,7 +4,6 @@
   +absolute
   top: 0
   width: 100%
-  z-index: 1111
 
 
   .loginPanelWrap
