--- a/app/sass/meta_menu_user.sass
+++ b/app/sass/meta_menu_user.sass
@@ -33,7 +33,6 @@
   +absolute
   top: 0
   width: 100%
-  z-index: 1111
 
   .leftPanelWrap
     +absolute
@@ -68,6 +67,7 @@
       padding: 2px 8px 2px 4px
       &:active
         +gradient(#ddd, #fff)
+        color: #333 !important
       &:hover, &.user
         border: 1px solid #8c8c8c
         color: #4b93d9
